# backend/openapi.json
@@ -1231,6 +1231,46 @@
         }
       }
     },
+    "/api/me/files/{id}/usages": {
+      "get": {
+        "tags": [
+          "MyFiles"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/FileUsageDtoListApiResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/FileUsageDtoListApiResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/FileUsageDtoListApiResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/me/files/{id}": {
       "delete": {
         "tags": [
@@ -5171,6 +5211,65 @@
           "PowerPoint",
           "Excel",
           "Archive"
+        ],
+        "type": "string"
+      },
+      "FileUsageDto": {
+        "required": [
+          "id",
+          "kind",
+          "title"
+        ],
+        "type": "object",
+        "properties": {
+          "kind": {
+            "$ref": "#/components/schemas/FileUsageKind"
+          },
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "title": {
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
+      },
+      "FileUsageDtoListApiResponse": {
+        "required": [
+          "errors",
+          "message",
+          "success"
+        ],
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean"
+          },
+          "message": {
+            "type": "string"
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FileUsageDto"
+            },
+            "nullable": true
+          },
+          "errors": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "additionalProperties": false
+      },
+      "FileUsageKind": {
+        "enum": [
+          "Portfolio",
+          "Post",
+          "Profile"
         ],
         "type": "string"
       },
